--- a/src/public/assets/404.html
+++ b/src/public/assets/404.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="robots" content="noindex">
+
   <title>ちょっと惜しかったみたいです | mirumi.tech</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
